--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 
 @model BooksViewModel
 
-
+<!-- LOOP THROUGH BOOKS USING BOOSTRAP -->
 @foreach (var b in Model.Books)
 {
     <div class="card card-outline-primary m-1 p-1">
@@ -24,6 +24,7 @@
     </div>
 }
 
+<!-- PAGE BUTTON INFO -->
 <div page-model="@Model.PageInfo" page-action="Index" page-classes-enabled="true"
      page-class="btn" page-class-normal="btn-outline-dark"
      page-class-selected="btn-primary" class="btn-group pull-right m-1">
