--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,18 +5,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Mission09</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link href="~/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
     <!-- ESSENTIALLY THE NAVBAR -->
     <header>
-        <div class="bg-dark text-white p-2">
+        <div class="bg-gradient text-white p-2">
             <span class="navbar-brand ml-2">Book Store</span>
         </div>
         <div class="row m-1 p-1">
             <div id="categories" class="col-3">
-                This is the really cool Mission 09 Bookstore
+                <vc:category></vc:category>
             </div>
 
             <!-- THIS IS WHERE THE BODY AND BOOKS GO-->
