--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @addTagHelper *, Mission09_jhuish88
 @using Mission09_jhuish88.Models
 @using Mission09_jhuish88.Models.ViewModels
+@using Mission09_jhuish88.Infrastructure 
