--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Mission09</title>
     <link href="~/css/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- ESSENTIALLY THE NAVBAR -->
     <header>
         <div class="bg-gradient text-white p-2">
-            <span class="navbar-brand ml-2">Book Store</span>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col navbar-brand">Book Store</div>
+                    <div class="col-6 text-right" style="align-content:flex-end">
+                        <vc:basket-summary></vc:basket-summary>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="row m-1 p-1">
             <div id="categories" class="col-3">
