--- a/Pages/Order.cshtml
+++ b/Pages/Order.cshtml
@@ -24,6 +24,13 @@
                 <td>@i.Quantity</td>
                 <td>@i.Book.Price</td>
                 <td>@(i.Quantity * i.Book.Price)</td>
+                <td class="text-center">
+                    <form method="post" asp-page-handler="Remove" style="padding:0px 0px 0px 0px; border:none; width:50px">
+                        <input type="hidden" name="bookId" value="@i.Book.BookId" />
+                        <input type="hidden" name="returnUrl " value="@Model.ReturnUrl" />
+                        <button type="submit" class="btn btn-sm btn-danger">Remove</button>
+                    </form>
+                </td>
             </tr>
         }
     </tbody>
@@ -41,4 +48,5 @@
 <!-- CONTINUE SHOPPING BUTTON -->
 <div>
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Shopping</a>
+    <a class="btn btn-primary" asp-controller="Order" asp-action="Checkout">Checkout</a>
 </div>
