--- a/Views/Shared/Components/Category/Default.cshtml
+++ b/Views/Shared/Components/Category/Default.cshtml
@@ -13,7 +13,7 @@
 
     @foreach (string c in Model)
     {
-        <a asp-controller="Home" asp-action="Index" asp-route-bookCategory="@c" asp-route-pagNum="1"
+        <a asp-controller="Home" asp-action="Index" asp-route-bookCategory="@c" asp-route-pageNum="1"
             class="btn @(ViewBag.SelectedCategory == c ? "btn-primary" : "btn-outline-secondary")" style="margin-top:6px;">@c</a>
     }
 </div>
